Addresses issue #31: Top nav is too wide for smaller devices and is truncated

--- a/src/css/fusion.css
+++ b/src/css/fusion.css
@@ -170,11 +170,20 @@ pre {
     }
 }
 
-/* navbar */
+/* top navbar */
+
+.topnav a {
+    font-size: 1rem;
+}
+
+#navbar-examples {
+    display: none;
+}
 
 #navbar-sol {
     width: 30px;
     height: 30px;
+    display: none;
 }
 
 #navbar-github {
@@ -183,14 +192,14 @@ pre {
     color: #fff;
 }
 
-nav a {
-    font-size: var(--font-size);
-}
-
 @media (min-width: 576px) {
+    #navbar-examples {
+        display: inline-block;
+    }
     #navbar-sol {
         width: 38px;
         height: 38px;
+        display: inline-block;
     }
 }
 
